--- a/Convolutions.ipynb
+++ b/Convolutions.ipynb
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "hidden": true
    },
@@ -468,7 +468,7 @@
     }
    ],
    "source": [
-    "out = np.dot(Xrow, W)\n",
+    "out = np.dot(Xhat, W)\n",
     "print(out)\n",
     "print(out.shape)"
    ]
